|Ramu| Remove languages from dropdown

--- a/locales/en.json
+++ b/locales/en.json
@@ -151,5 +151,6 @@
 	"Quarterly": "Quarterly",
 	"Gender Contribution": "Gender Contribution",
 	"State Wise distribution": "State Wise distribution",
-	"Age Group Distribution": "Age Group Distribution"
+	"Age Group Distribution": "Age Group Distribution",
+	"Show All": "Show All"
 }
