--- a/locales/ml.json
+++ b/locales/ml.json
@@ -106,5 +106,6 @@
 	"Page Not Found": "പേജ് കണ്ടെത്താനായില്ല",
 	"Looks like you have taken a wrong turn here": "നിങ്ങളുടെ അഭ്യർത്ഥന പ്രോസസ് ചെയ്യുമ്പോൾ ഒരു അപ്രതീക്ഷിത പിശകുണ്ടായി. കുറച്ചു സമയത്തിനു ശേഷം വീണ്ടും ശ്രമിക്കുക.",
 	"Click Here": "ക്ലിക്ക് ചെയ്യുക",
-	"to go back to home page": "ഹോം പേജിലേക്ക് തിരികെ പോകാൻ"
+	"to go back to home page": "ഹോം പേജിലേക്ക് തിരികെ പോകാൻ",
+	"Show All": "Show All"
 }
