--- a/locales/kn.json
+++ b/locales/kn.json
@@ -94,5 +94,6 @@
 	"By hours of data contributed": "ಮಾಹಿತಿ ಕೊಡುಗೆಯಿಂದ ಸಮಯದೊಳಗೆ",
 	"By number of speakers": "ಭಾಷಣಕಾರರ ಸಂಖ್ಯೆಯಿಂದ",
 	"VIEW ALL DETAILS": "ಎಲ್ಲಾ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
-	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>"
+	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
+	"Show All": "Show All"
 }
