|priyanshu| modify updatedHrsInSayListen component for default value in home.js

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -96,5 +96,6 @@
 	"total hours validated": "মোট বৈধ",
 	"total hours contributed": "মোট অবদান",
 	"Validate More": "আরও বৈধতা দিন",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"Show All": "Show All"
 }
