| Parth + Raunak | translations updated for malyalam

--- a/locales/hi.json
+++ b/locales/hi.json
@@ -120,5 +120,6 @@
 	"Click Here": "यहाँ क्लिक करें",
 	"to go back to home page": "अपने होम पेज पर जाने के लिए",
 	"Show All": "अन्य भाषाएं",
-	"Select the language for contribution:": "Select the language for contribution:"
+	"Select the language for contribution:": "Select the language for contribution:",
+	"Enter preferred username": "Enter preferred username"
 }
