--- a/locales/ml.json
+++ b/locales/ml.json
@@ -92,10 +92,10 @@
 	"Come Back again to<br />hit your goalpost": "നിങ്ങളുടെ ലക്ഷ്യം കൈവരിക്കാനായി വീണ്ടും വരിക",
 	"Instructions": "നിർദ്ദേശങ്ങൾ",
 	"Play": "പ്ലേ ചെയ്യുക",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing": "Start Contributing",
+	"Thank you for your enthusiasm to validate the voice samples": "ശബ്‌ദ സാമ്പിളുകൾ സാധൂകരിക്കാനുള്ള നിങ്ങളുടെ ഉത്സാഹത്തിന് നന്ദി",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ഇതിനായുള്ള ഡാറ്റ സംഭാവന യാത്ര ഞങ്ങൾ അടുത്തിടെ ആരംഭിച്ചു <span id=\"spn-validation-language\"></span> നിങ്ങളുടെ മൂല്യനിർണ്ണയത്തിനായി ഉടൻ തന്നെ ശബ്ദ സാമ്പിളുകൾ ശേഖരിക്കുമെന്ന് ഭാഷയും പ്രത്യാശയും.",
+	"Would you also like to contribute your voice?": "നിങ്ങളുടെ ശബ്‌ദം സംഭാവന ചെയ്യാനും നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
+	"Start Contributing": "സംഭാവന ചെയ്യാൻ ആരംഭിക്കുക",
 	"Thank you for validating!": "സാധൂകരിച്ചതിന് നന്ദി!",
 	"You have helped us validate <span id=\"spn-validation-count\"></span> voice samples out of <span id=\"spn-total-contribution-count\"></span> contributed in \"<span id=\"spn-validation-language-2\"></span>\" language.": "<span id=\"spn-validation-language-2\"></span> ഭാഷയിൽ സംഭാവന ചെയ്യപ്പെട്ട <span id=\"spn-total-contribution-count\"></span> ശബ്ദ സാമ്പിളുകളിൽ <span id=\"spn-validation-count\"></span> ശബ്ദ സാമ്പിളുകൾ സാധൂകരിക്കാൻ നിങ്ങൾ ഞങ്ങളെ സഹായിച്ചിരിക്കുന്നു.",
 	"total hours validated": "ആകെ സാധൂകരിച്ചത്",
@@ -107,5 +107,20 @@
 	"Looks like you have taken a wrong turn here": "നിങ്ങളുടെ അഭ്യർത്ഥന പ്രോസസ് ചെയ്യുമ്പോൾ ഒരു അപ്രതീക്ഷിത പിശകുണ്ടായി. കുറച്ചു സമയത്തിനു ശേഷം വീണ്ടും ശ്രമിക്കുക.",
 	"Click Here": "ക്ലിക്ക് ചെയ്യുക",
 	"to go back to home page": "ഹോം പേജിലേക്ക് തിരികെ പോകാൻ",
-	"Show All": "Show All"
+	"Show All": "എല്ലാം കാണിക്കൂ",
+	"All Languages": "എല്ലാ ഭാഷകളും",
+	"We do not have any data for": "ഞങ്ങൾക്ക് ഡാറ്റയൊന്നുമില്ല",
+	"Contribute Now": "ഇപ്പോൾ സംഭാവന ചെയ്യുക",
+	"hours validated": "സാധൂകരിച്ച ശബ്ദം",
+	"Progress Chart": "പുരോഗതി സമയക്രമം",
+	"Monthly": "പ്രതിമാസം",
+	"Quarterly": "ത്രൈമാസ",
+	"Gender Contribution": "ലിംഗഭേദമനുസരിച്ചുള്ള സംഭാവന",
+	"State Wise distribution": "സംസ്ഥാനങ്ങളുടെ ക്രമം",
+	"Age Group Distribution": "പ്രായവിഭാഗത്തിൻ്റെ ക്രമം",
+	"Select the language": "ഒരു ഭാഷ തിരഞ്ഞെടുക്കുക",
+	"Data Last Updated": "ഡാറ്റ അവസാനം അപ്ഡേറ്റ് ചെയ്തത്",
+	"would you like to contribute for it?": "അതിനായി സംഭാവന നൽകാൻ നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
+	"Enter preferred username": "ഇഷ്ടമുള്ള യൂസർനെയിം നൽകുക",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language."
 }
