--- a/locales/bn.json
+++ b/locales/bn.json
@@ -97,5 +97,6 @@
 	"total hours contributed": "মোট অবদান",
 	"Validate More": "আরও বৈধতা দিন",
 	"Validating Instructions": "Validating Instructions",
-	"Show All": "Show All"
+	"Show All": "সব দেখাও",
+	"Enter preferred username": "Enter preferred username"
 }
