| Raunak + Parth | translations for bengali

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -73,7 +73,7 @@
 	"Ensure there is <b>no background noise</b>": "নিশ্চিত করুন যে কোনও  গোলমাল নেই",
 	"Get comfortable with the prompted text, before recording, by <b>reading it aloud</b>": "রেকর্ডিংয়ের আগে, অনুরোধযোগ্য পাঠ্যটি জোরে জোরে পাঠ  করুন",
 	"Get started by clicking on <b>Record</b> button": "রেকর্ড বোতামে ক্লিক করে শুরু করুন",
-	"START": "START",
+	"START": "শুরু",
 	"Error!!!": "ত্রুটি!!!",
 	"An unexpected error occured while processing your request. Please try after some time.": "আপনার অনুরোধটি প্রক্রিয়া করার সময় একটি অপ্রত্যাশিত ত্রুটি ঘটেছে। কিছু সময় পরে চেষ্টা করুন।",
 	"Close": "বন্ধ করুন",
@@ -87,16 +87,29 @@
 	"Come Back again to<br />hit your goalpost": "আপনার লক্ষ্য বস্তু  আঘাত করতে আবার ফিরে আসুন",
 	"Instructions": "নির্দেশাবলী",
 	"Play": "শুরু করুন",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing": "Start Contributing",
+	"Thank you for your enthusiasm to validate the voice samples": "ভয়েস নমুনাগুলি যাচাই করতে আপনার উত্সাহের জন্য আপনাকে ধন্যবাদ",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "আমরা সম্প্রতি ডেটা অবদানের যাত্রা শুরু করেছি <span id=\"spn-validation-language\"></span> ভাষা এবং আশা করি খুব শীঘ্রই আপনার বৈধতার জন্য ভয়েস নমুনাগুলি সংগ্রহ করা হবে।",
+	"Would you also like to contribute your voice?": "আপনি কি নিজের কন্ঠে অবদান রাখতে চান?",
+	"Start Contributing": "অবদান শুরু করুন",
 	"Thank you for validating!": "বৈধ হওয়ার জন্য ধন্যবাদ!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "আপনি আমাদের <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> ভাষার <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> টি নমুনার মধ্যে <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> টি ভয়েস নমুনাগুলি যাচাই করতে সহায়তা করেছেন",
 	"total hours validated": "মোট বৈধ",
 	"total hours contributed": "মোট অবদান",
 	"Validate More": "আরও বৈধতা দিন",
-	"Validating Instructions": "Validating Instructions",
+	"Validating Instructions": "বৈধকরণের নির্দেশাবলী",
 	"Show All": "সব দেখাও",
-	"Enter preferred username": "Enter preferred username"
+	"Enter preferred username": "পছন্দের ব্যবহারকারী নাম লিখুন",
+	"Select the language": "একটি ভাষা নির্বাচন করুন",
+	"All Languages": "সকল ভাষা",
+	"Data Last Updated": "শেষ ডেটা আপডেট হয়েছে",
+	"We do not have any data for": "আমাদের কাছে কোনও ডেটা নেই",
+	"would you like to contribute for it?": "আপনি কি এর জন্য অবদান রাখতে চান?",
+	"Contribute Now": "এখন অবদান",
+	"hours validated": "বৈধতা ঘন্টা",
+	"Progress Chart": "অগ্রগতির সময়রেখা",
+	"Monthly": "মাসিক",
+	"Quarterly": "ত্রৈমাসিক",
+	"Gender Contribution": "লিঙ্গ অবদান",
+	"State Wise distribution": "রাজ্য অনুসারে বিতরণ",
+	"Age Group Distribution": "বয়স গ্রুপ বিতরণ"
 }
