--- a/locales/hi.json
+++ b/locales/hi.json
@@ -89,37 +89,34 @@
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Instructions": "Instructions",
 	"Play": "प्ले करें",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing": "Start Contributing",
+	"Thank you for your enthusiasm to validate the voice samples": "आवाज के नमूनों को मान्य करने के लिए आपके उत्साह के लिए धन्यवाद",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "हमने हाल ही में <span id=\"spn-validation-language\"></span> भाषा के लिए डेटा योगदान यात्रा शुरू की है और आशा करते हैं कि बहुत जल्द आपकी मान्यता के लिए आवाज के नमूने एकत्र किए जाएंगे।",
+	"Would you also like to contribute your voice?": "क्या आप भी अपनी आवाज़ देना चाहेंगे?",
+	"Start Contributing": "योगदान करें",
 	"Thank you for validating!": "प्रमाणित करने के लिए शुक्रिया!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "आपने हमें  <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span>  भाषा में दिए गए  <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> में से <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
 	"total hours validated": "कुल प्रमाणित घंटे",
 	"total hours contributed": "कुल योगदान के घंटे",
 	"Validate More": "अधिक प्रमाणित करें",
-	"Validating Instructions": "Validating Instructions",
+	"Validating Instructions": "प्रमाणित करने के निर्देश",
 	"Select the language:": "भाषा का चयन करें:",
 	"All Languages": "सभी भाषाएं",
-	"Data Last Updated:": "अंतिम बार आधार-सामाग्री अपडेट की गई:",
-	"We do not have any data for": "We do not have any data for",
-	"would you like contribute for it?": "would you like contribute for it?",
-	"Contribute Now": "योगदान के घंटे",
+	"Contribute Now": "योगदान करें",
 	"hours validated": "प्रमाणित घंटे",
-	"Progress Chart": "Progress Chart",
-	"Monthly": "Monthly",
-	"Quarterly": "Quarterly",
+	"Progress Chart": "प्रगति समयरेखा",
+	"Monthly": "मासिक",
+	"Quarterly": "त्रैमासिक",
 	"Gender Contribution": "आयु समूह का योगदान",
 	"State Wise distribution": "राज्यवार वितरण",
 	"Age Group Distribution": "आयु समूह वितरण",
-	"Pick age range": "Pick age range",
-	"I have read and agree to the": "I have read and agree to the",
 	"Oops": "Oops",
 	"Page Not Found": "पेज नहीं मिल रहा",
 	"Looks like you have taken a wrong turn here": "लगता है आपने गलत तरीका चुन लिया है",
 	"Click Here": "यहाँ क्लिक करें",
 	"to go back to home page": "अपने होम पेज पर जाने के लिए",
 	"Show All": "अन्य भाषाएं",
-	"Select the language for contribution:": "Select the language for contribution:",
-	"Enter preferred username": "Enter preferred username"
+	"Enter preferred username": "पसंदीदा उपयोगकर्ता नाम दर्ज करें",
+	"Select the language": "भाषा का चयन करें",
+	"Data Last Updated": "अंतिम बार आधार-सामाग्री अपडेट की गई",
+	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "हमारे पास <span id=\"languageSelected\"></span> के लिए कोई डेटा नहीं है क्या आप इसके लिए योगदान करना चाहेंगे?"
 }
