--- a/locales/kn.json
+++ b/locales/kn.json
@@ -95,5 +95,30 @@
 	"By number of speakers": "ಭಾಷಣಕಾರರ ಸಂಖ್ಯೆಯಿಂದ",
 	"VIEW ALL DETAILS": "ಎಲ್ಲಾ ವಿವರಗಳನ್ನು ವೀಕ್ಷಿಸಿ",
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
-	"Show All": "ಎಲ್ಲ ತೋರಿಸು"
+	"Show All": "ಎಲ್ಲ ತೋರಿಸು",
+	"Enter preferred username": "Enter preferred username",
+	"Select the language": "Select the language",
+	"All Languages": "All Languages",
+	"Data Last Updated": "Data Last Updated",
+	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Contribution": "Gender Contribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution",
+	"Instructions": "Instructions",
+	"Play": "Play",
+	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing": "Start Contributing",
+	"Thank you for validating!": "Thank you for validating!",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
+	"total hours validated": "total hours validated",
+	"total hours contributed": "total hours contributed",
+	"Validate More": "Validate More",
+	"Validating Instructions": "Validating Instructions"
 }
