--- a/locales/ml.json
+++ b/locales/ml.json
@@ -93,7 +93,7 @@
 	"Instructions": "നിർദ്ദേശങ്ങൾ",
 	"Play": "പ്ലേ ചെയ്യുക",
 	"Thank you for your enthusiasm to validate the voice samples": "ശബ്‌ദ സാമ്പിളുകൾ സാധൂകരിക്കാനുള്ള നിങ്ങളുടെ ഉത്സാഹത്തിന് നന്ദി",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ഇതിനായുള്ള ഡാറ്റ സംഭാവന യാത്ര ഞങ്ങൾ അടുത്തിടെ ആരംഭിച്ചു <span id=\"spn-validation-language\"></span> നിങ്ങളുടെ മൂല്യനിർണ്ണയത്തിനായി ഉടൻ തന്നെ ശബ്ദ സാമ്പിളുകൾ ശേഖരിക്കുമെന്ന് ഭാഷയും പ്രത്യാശയും.",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "<span id=\"spn-validation-language\"></span> ഭാഷയ്‌ക്കായി ഞങ്ങൾ അടുത്തിടെ ഡാറ്റാ കോൺട്രിബ്യൂഷൻ യാത്ര ആരംഭിച്ചു, നിങ്ങളുടെ മൂല്യനിർണ്ണയത്തിനായി ഉടൻ തന്നെ വോയ്‌സ് സാമ്പിളുകൾ ശേഖരിക്കുമെന്ന് പ്രതീക്ഷിക്കുന്നു.",
 	"Would you also like to contribute your voice?": "നിങ്ങളുടെ ശബ്‌ദം സംഭാവന ചെയ്യാനും നിങ്ങൾ ആഗ്രഹിക്കുന്നുണ്ടോ?",
 	"Start Contributing": "സംഭാവന ചെയ്യാൻ ആരംഭിക്കുക",
 	"Thank you for validating!": "സാധൂകരിച്ചതിന് നന്ദി!",
