--- a/locales/kn.json
+++ b/locales/kn.json
@@ -97,24 +97,24 @@
 	"I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>": "I have read and agree to the <a href=\"/terms-and-conditions\"> Terms and Conditions </a>",
 	"Show All": "ಎಲ್ಲ ತೋರಿಸು",
 	"Enter preferred username": "Enter preferred username",
-	"Select the language": "Select the language",
-	"All Languages": "All Languages",
-	"Data Last Updated": "Data Last Updated",
-	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?",
-	"Contribute Now": "Contribute Now",
-	"hours validated": "hours validated",
-	"Progress Chart": "Progress Chart",
-	"Monthly": "Monthly",
-	"Quarterly": "Quarterly",
-	"Gender Contribution": "Gender Contribution",
-	"State Wise distribution": "State Wise distribution",
-	"Age Group Distribution": "Age Group Distribution",
-	"Instructions": "Instructions",
+	"Select the language": "ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+	"All Languages": "ಎಲ್ಲಾ ಭಾಷೆಗಳು",
+	"Data Last Updated": "ಕೊನೆಯದಾಗಿ ಮಾಹಿತಿ ನವೀಕರಿಸಲಾಗಿದ್ದು",
+	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "<span id=\"languageSelected\"></span> ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ ನೀವು ಅದಕ್ಕೆ ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
+	"Contribute Now": "ಈಗ ಕೊಡುಗೆ ನೀಡಿ",
+	"hours validated": "ಮೌಲ್ಯೀಕರಿಸಿದ ಸಮಯ",
+	"Progress Chart": "ಪ್ರೋಗ್ರಾಮ್ ಸಮಯ ಗಡವು",
+	"Monthly": "ಮಾಸಿಕ",
+	"Quarterly": "ತ್ರೈಮಾಸಿಕ",
+	"Gender Contribution": "ಲಿಂಗ ಕೊಡುಗೆ",
+	"State Wise distribution": "ರಾಜ್ಯವಾರು ವಿತರಣೆ",
+	"Age Group Distribution": "ವಯೋಮಾನ ವಿತರಣೆ",
+	"Instructions": "ಸೂಚನೆಗಳು",
 	"Play": "Play",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing": "Start Contributing",
+	"Thank you for your enthusiasm to validate the voice samples": "ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಲು ನಿಮ್ಮ ಉತ್ಸಾಹಕ್ಕೆ ಧನ್ಯವಾದಗಳು",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "ನಾವು ಇತ್ತೀಚೆಗೆ <span id=\"spn-validation-language\"></span> ಭಾಷೆಗಾಗಿ ಡೇಟಾ ಕೊಡುಗೆ ಪ್ರಯಾಣವನ್ನು ಪ್ರಾರಂಭಿಸಿದ್ದೇವೆ ಮತ್ತು ಶೀಘ್ರದಲ್ಲೇ ನಿಮ್ಮ ation ರ್ಜಿತಗೊಳಿಸುವಿಕೆಗಾಗಿ ಧ್ವನಿ ಮಾದರಿಗಳನ್ನು ಸಂಗ್ರಹಿಸಲಾಗುವುದು ಎಂದು ಭಾವಿಸುತ್ತೇವೆ.",
+	"Would you also like to contribute your voice?": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಸಹ ನೀವು ನೀಡಲು ಬಯಸುವಿರಾ?",
+	"Start Contributing": "ಕೊಡುಗೆ ನೀಡಲು ಪ್ರಾರಂಭಿಸಿ",
 	"Thank you for validating!": "Thank you for validating!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
 	"total hours validated": "total hours validated",
