| Raunak | dashboard no data found changes

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -111,5 +111,6 @@
 	"Quarterly": "ত্রৈমাসিক",
 	"Gender Contribution": "লিঙ্গ অবদান",
 	"State Wise distribution": "রাজ্য অনুসারে বিতরণ",
-	"Age Group Distribution": "বয়স গ্রুপ বিতরণ"
+	"Age Group Distribution": "বয়স গ্রুপ বিতরণ",
+	"We do not have any data for this language, would you like to contribute for it?": "এই ভাষার জন্য আমাদের কাছে কোনও ডেটা নেই, আপনি কি এর জন্য অবদান রাখতে চান?"
 }
