--- a/locales/kn.json
+++ b/locales/kn.json
@@ -120,5 +120,6 @@
 	"total hours validated": "total hours validated",
 	"total hours contributed": "total hours contributed",
 	"Validate More": "Validate More",
-	"Validating Instructions": "Validating Instructions"
+	"Validating Instructions": "Validating Instructions",
+	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗೆ ನಮ್ಮಲ್ಲಿ ಯಾವುದೇ ಡೇಟಾ ಇಲ್ಲ, ಅದಕ್ಕಾಗಿ ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?"
 }
