| Raunak | Gujarati remaining translations

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -100,17 +100,14 @@
 	"Validating Instructions": "માન્ય કરવાની સૂચનાઓ",
 	"languages contributed": "ફાળો આપેલી ભાષાઓ",
 	"hours recorded": "રેકોર્ડ કરેલા કલાકો",
-	"Thank you for your enthusiasm to validate the voice samples": "Thank you for your enthusiasm to validate the voice samples",
-	"We have recently commenced the data contribution journey for \"Y\" language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for \"Y\" language and hope that very soon there will be voice samples collected for your validation.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Thank you for your enthusiasm to validate the voice samples": "વોઇસ સેમ્પલ્સને માન્ય કરવા માટે તમે બતાવેલા ઉત્સાહ બદલ તમારો આભાર.",
+	"Would you also like to contribute your voice?": "શું તમે તમારા અવાજનો ફાળો આપવા માંગો છો?",
 	"Start Contributing": "ફાળો આપવાનું ચાલુ કરો",
-	"We have recently commenced the data contribution journey for \"<span id=\"spn-validation-language\"></span>\" language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for \"<span id=\"spn-validation-language\"></span>\" language and hope that very soon there will be voice samples collected for your validation.",
-	"Start Contributing in <span id=\"spn-contribution-language\"></span>": "Start Contributing in <span id=\"spn-contribution-language\"></span>",
+	"Start Contributing in <span id=\"spn-contribution-language\"></span>": "<span id=\"spn-contribution-language\"></span> ભાષામાં ફાળો આપવાનું શરૂ કરો",
 	"total hours validated": "કુુલ માન્ય કરેલા",
 	"total hours contributed": "કુલ સહભાગી",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.",
 	"Select the language for contribution": "ફાળા માટે ભાષા પસંદ કરો",
-	"Show All": "Show All",
+	"Show All": "બધું બતાવો",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "વાક્યાંશ: ભારતીય ભાષાઓ માટે એક ક્રાઉડસોર્સિંગની પહેલ",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "ભારતીય ભાષાઓમાં અવાજ પારખતા મોડલ વિકસાવવા માટે, વિવિધ ભારતીય અવાજોના ઓપન ડેટા ભંડારની જરૂર છે.",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "અવાજ પારખનાર મોડલ્સ બનાવવાની ચાવી, સમગ્ર રાજ્યો અને બોલીઓ દ્વારા પૂરો પાડવામાં આવતો વિવિધ ડેટા છે.",
@@ -133,17 +130,25 @@
 	"Select the language": "એક ભાષા પસંદ કરો",
 	"All Languages": "તમામ ભાષાઓ",
 	"Data Last Updated": "છેલ્લે અપડેટ કરાયેલો ડેટા",
-	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
-	"Contribute Now": "Contribute Now",
-	"hours validated": "hours validated",
+	"We do not have any data for this language, would you like to contribute for it?": "અમારી પાસે આ ભાષા માટે કોઈ ડેટા નથી, શું તમે તેના માટે ફાળો આપવા માંગો છો?",
+	"Contribute Now": "હવે ફાળો",
+	"hours validated": "કલાક માન્ય",
 	"Progress Chart": "પ્રગતિની સમયરેખા",
-	"Monthly": "Monthly",
-	"Quarterly": "Quarterly",
+	"Monthly": "માસિક",
+	"Quarterly": "ત્રિમાસિક",
 	"Gender Contribution": "જાતિ પ્રમાણે સહભાગી",
 	"State Wise distribution": "રાજ્ય પ્રમાણે વિતરણ",
 	"Age Group Distribution": "વય જૂૂથ પ્રમાણે વિતરણ",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.",
 	"Ensure the voice is <b>clear and audible</b>": "ખાતરી કરો કે અવાજ <b>સ્પષ્ટ અને સંભાળ</b> એવો છે",
 	"Match the voice to the text <b>accurately</b>": "અવાજને ટેક્સ્ટ સાથે <b>સચોટ રીતે</b> મેળવો",
-	"If you are unsure of the match, skip the particular voice sample": "જો તમે મેળવી ન શકતા હો, તો એ વોઇસ સેમ્પલને રેકોર્ડ કરવાનું મૂકી દો"
+	"If you are unsure of the match, skip the particular voice sample": "જો તમે મેળવી ન શકતા હો, તો એ વોઇસ સેમ્પલને રેકોર્ડ કરવાનું મૂકી દો",
+	"Oops": "અરેરે",
+	"Page Not Found": "પેજ મળ્યું નહિ",
+	"Looks like you have taken a wrong turn here": "એવું લાગે છે કે તમે અહીં ખોટો વળાંક લીધો છે",
+	"Click Here": "ક્લિક કરો",
+	"to go back to home page": "હોમ પેજ પર જવા માટે અહીં પર",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "અમે <span id=\"spn-validation-language\"></span> ભાષા માટે તાજેતરમાં જ ડેટાનો ફાળો શરૂ કર્યો છે અને આશા રાખીએ છીએ કે જલદી જ વોઇસ સેમ્પલ્સ ભેગા કરવામાં આવશે",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "તમે અમને <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> સેકંડ માન્ય કરવામાં સહાય કરી છે",
+	"EkStep Foundation": "EkStep ફાઉન્ડેશન"
 }
