| Raunak | Odia + Marathi translations and mother tongue word corrected

--- a/locales/bn.json
+++ b/locales/bn.json
@@ -27,7 +27,7 @@
 	"Username": "ব্যবহারকারীর নাম",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
 	"Mother Tongue": "মাতৃভাষা",
-	"Select Mothertongue": "মাতৃভাষা নির্বাচন করুন",
+	"Select Mother Tongue": "মাতৃভাষা নির্বাচন করুন",
 	"Age Group": "বয়স গ্রুপ",
 	"Select Age Group": "বয়স গ্রুপ  নির্বাচন করুন",
 	"Gender": "লিঙ্গ",
