--- a/locales/gu.json
+++ b/locales/gu.json
@@ -23,7 +23,7 @@
 	"Not You? Change User": "તમે નહિ? વપરાશકર્તા બદલો",
 	"Username": "યુઝરનેમ",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
-	"Select Mothertongue": "માતૃભાષા પસંદ કરો",
+	"Select Mother Tongue": "માતૃભાષા પસંદ કરો",
 	"Pick age range": "Pick age range",
 	"I have read and agree to the": "I have read and agree to the",
 	"Terms and Conditions": "Terms and Conditions",
