--- a/locales/kn.json
+++ b/locales/kn.json
@@ -23,7 +23,7 @@
 	"Username": "ಬಳಕೆದಾರರ ಹೆಸರು",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
 	"Mother Tongue": "ಮಾತೃ ಭಾಷೆ",
-	"Select Mothertongue": "ಮಾತೃಭಾಷೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ",
+	"Select Mother Tongue": "ಮಾತೃಭಾಷೆಯನ್ನು ಆಯ್ಕೆ ಮಾಡಿ",
 	"Age Group": "ವಯೋಮಾನ",
 	"Select Age Group": "ವಯೋಮಾನವನ್ನು ಆಯ್ಕೆ ಮಾಡಿ",
 	"Gender": "ಲಿಂಗ",
