--- a/locales/ml.json
+++ b/locales/ml.json
@@ -27,7 +27,7 @@
 	"Username": "യൂസർനെയിം",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
 	"Mother Tongue": "മാതൃഭാഷ",
-	"Select Mothertongue": "മാതൃഭാഷ തിരഞ്ഞെടുക്കുക",
+	"Select Mother Tongue": "മാതൃഭാഷ തിരഞ്ഞെടുക്കുക",
 	"Age Group": "പ്രായ വിഭാഗം",
 	"Select Age Group": "പ്രായ വിഭാഗം തിരഞ്ഞെടുക്കുക",
 	"Gender": "ലിംഗം",
