--- a/locales/mr.json
+++ b/locales/mr.json
@@ -23,7 +23,7 @@
 	"Not You? Change User": "तुम्ही नाही? युजर बदला",
 	"Username": "युजरनेम",
 	"Please don't use email or mobile number as user name": "Please don't use email or mobile number as user name",
-	"Select Mothertongue": "मातृभाषा निवडा",
+	"Select Mother Tongue": "मातृभाषा निवडा",
 	"Pick age range": "Pick age range",
 	"I have read and agree to the": "I have read and agree to the",
 	"Terms and Conditions": "Terms and Conditions",
@@ -56,7 +56,7 @@
 	"Terms of Use": "Terms of Use",
 	"Copyright & Licensing Notice": "Copyright & Licensing Notice",
 	"Recording Instructions": "रेकॉर्डिंग सूचना",
-	"START": "START",
+	"START": "सुरु करा",
 	"Let's get started!": "चला सुरु करु या!",
 	"SKIP": "वगळा",
 	"STOP RECORDING": "रेकॉर्डिंग थांबवा",
@@ -93,8 +93,8 @@
 	"hours recorded": "रेकॉर्ड केलेले तास",
 	"Instructions": "सूचना",
 	"Play": "प्ले",
-	"Thank you for your enthusiasm to validate the voice samples": "व्हॉइस नमुने सत्यापित करण्यासाठी आपल्या उत्साहाबद्दल धन्यवाद",
-	"Would you also like to contribute your voice?": "आपण देखील आपल्या आवाजात योगदान देऊ इच्छिता?",
+	"Thank you for your enthusiasm to validate the voice samples": "आवाज नमुने सत्यापित करण्यासाठी आपल्या उत्साहाबद्दल धन्यवाद.",
+	"Would you also like to contribute your voice?": "आपणही तुमच्या आवाजात योगदान देऊ इच्छिता?",
 	"Start Contributing": "योगदान सुरु करा",
 	"Thank you for validating!": "सत्यापन केल्याबद्दल आभार!",
 	"You have helped us validate 10 recordings out \"x\" sentences contributed in \"y\" language.": "You have helped us validate 10 recordings out \"x\" sentences contributed in \"y\" language.",
@@ -103,7 +103,7 @@
 	"Validate More": "अधिक सत्यापन करा",
 	"Validating Instructions": "सूचना सत्यापित करणे",
 	"Select the language for contribution": "तुमच्या योगदानाची भाषा निवडा",
-	"Show All": "Show All",
+	"Show All": "सगळं दाखवा",
 	"Vakyansh: A crowdsourcing initiative for Indian languages": "वाक्यांश: भारतीय भाषेसाठी क्राऊडसोर्सिंगचा उपक्रम",
 	"For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.": "भारतीय भाषांमध्ये स्पीच रेकगनिशन मॉडेल्सच्या विकासासाठी, विविध भारतीय आवाजांचा ओपन डेटा कोष आवश्यक आहे.  भारतीय आवाजांचा वैविध्यपूर्ण ओपन डेटा कोष तयार करण्यासाठी वाक्यांश तुम्हाला आवाजाच्या योगदानाचे आवाहन करीत आहे. ",
 	"The key to building speech recognition models, lies in the diversity of the data that you provide by contributing across states, dialects, accents, gender and age group. The magnitude of this diversity across the nation, gives us collective strength in empowering our languages.": "आपण राज्ये, पोटभाषा, उच्चारण, लिंग आणि वयोगटात योगदान देऊन प्रदान करता त्या डेटाच्या विविधतेमध्ये स्पीच रेकगनिशन मॉडेल तयार करण्याची गुरुकिल्ली आहे. देशभरातील या विविधतेचे परिमाण आपल्याला आपल्या भाषेच्या सशक्तीकरणात सामूहिक सामर्थ्य देतात.",
@@ -141,7 +141,7 @@
 	"Looks like you have taken a wrong turn here": "तुम्ही इथे चुकीचे वळण घेतले असे वाटते",
 	"Click Here": "इथे क्लिक करा",
 	"to go back to home page": "होम पेजवर परत जाण्यासाठी",
-	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "आम्ही नुकतीच <span id=\"spn-validation-language\"></span> भाषेसाठी डेटा योगदान प्रवास सुरू केला आहे आणि लवकरच आशा आहे की आपल्या प्रमाणीकरणासाठी व्हॉईसचे नमुने गोळा केले जातील.",
+	"We have recently commenced the data contribution journey for <span id=\"spn-validation-language\"></span> language and hope that very soon there will be voice samples collected for your validation.": "आम्ही अलीकडेच <span id=\"spn-validation-language\"></span> भाषेसाठी डेटा योगदान काम सुरु केले आहे आणि आशा वाटते की लवकरच आपल्या सत्यापणासाठी आवाज नमुने संकलित केले जातील.",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "आपण <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> भाषेमध्ये योगदान दिलेल्या <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> पैकी</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> आवाज नमुने सत्यापित करण्यास आम्हाला मदत केली",
 	"total hours validated": "एकूण सत्यापित",
 	"total hours contributed": "एकूण योगदान",
