--- a/locales/hi.json
+++ b/locales/hi.json
@@ -27,7 +27,7 @@
 	"Username": "यूज़रनेम",
 	"Please don't use email or mobile number as user name": "एक ईमेल या मोबाइल नंबर यूज़रनेम नहीं हो सकता",
 	"Mother Tongue": "मातृभाषा",
-	"Select Mothertongue": "चयनित मातृ भाषा",
+	"Select Mother Tongue": "चयनित मातृ भाषा",
 	"Age Group": "ऐज ग्रुप",
 	"Select Age Group": "ऐज ग्रुप चुनें",
 	"Gender": "लिंग",
@@ -95,7 +95,7 @@
 	"Start Contributing": "योगदान करें",
 	"Thank you for validating!": "प्रमाणित करने के लिए शुक्रिया!",
 	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span><span class=\"font-wt-900\"> recordings out of</span> <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span class=\"font-wt-900\"> sentences contributed in <span id=\"spn-validation-language-2\" class=\"font-wt-900\"></span> language.": "आपने हमें दिए गए  <span id=\"spn-total-contribution-count\" class=\"font-wt-900\"></span> में से <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
-	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings":  "आपने <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
+	"You have helped us validate <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "आपने <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> आवाज़ों के नमूनों को प्रमाणित करने में मदद की है।",
 	"total hours validated": "कुल प्रमाणित घंटे",
 	"total hours contributed": "कुल योगदान के घंटे",
 	"Validate More": "अधिक प्रमाणित करें",
@@ -120,5 +120,6 @@
 	"Select the language": "भाषा का चयन करें",
 	"Data Last Updated": "अंतिम बार आधार-सामाग्री अपडेट की गई",
 	"We do not have any data for <span id=\"languageSelected\"></span> would you like to contribute for it?": "हमारे पास <span id=\"languageSelected\"></span> के लिए कोई डेटा नहीं है क्या आप इसके लिए योगदान करना चाहेंगे?",
-	"We do not have any data for this language, would you like to contribute for it?": "हमारे पास इस भाषा के लिए कोई डेटा नहीं है, क्या आप इसके लिए योगदान देना चाहेंगे?"
+	"We do not have any data for this language, would you like to contribute for it?": "हमारे पास इस भाषा के लिए कोई डेटा नहीं है, क्या आप इसके लिए योगदान देना चाहेंगे?",
+	"Username cannot be more than 12 characters": "Username cannot be more than 12 characters"
 }
